objects/Investor_Account__c.object
<CustomObject>
    <fields>
        <fullName>AM_Services_Third_Party__c</fullName>
        <label>AM Services - Third Party</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Services__c</fullName>
        <label>AM Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Above_50MW_GB_project_AC_DC_ratio_used__c</fullName>
        <label>Above 50MW project AC-DC ratio used (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Above_50MW_IE_project_AC_DC_ratio_used__c</fullName>
        <label>Above 50MW project AC-DC ratio used (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Construction_Services_Third_Party__c</fullName>
        <label>Construction Services - Third Party</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Construction_Services__c</fullName>
        <label>Construction Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hydrogen_Interest_in_which_Region__c</fullName>
        <label>Hydrogen Interest in which Region?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>Northern Ireland</fullName>
                </value>
                <value>
                    <fullName>Republic of Ireland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_in_Hydrogen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Hydrogen?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_Onshore_Wind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Onshore Wind?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_Other_Markets__c</fullName>
        <label>Interested in Other Markets?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Nordics</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_in_Solar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Solar?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_Storage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Storage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Services_Third_Party__c</fullName>
        <label>O&amp;M Services - Third Party</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Services__c</fullName>
        <label>O&amp;M Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_Additional_Comments__c</fullName>
        <label>Onshore Additional Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_3rd_Party_Energy_Assessment__c</fullName>
        <label>3rd Party-Onshore Energy Assessment (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_AFRY_Revenue__c</fullName>
        <label>Onshore AFRY Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Additional_Dev_Risk__c</fullName>
        <label>Additional Onshore Dev Risk? (GB)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Aurora_Revenue__c</fullName>
        <label>Onshore Aurora Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Baringa_Revenue__c</fullName>
        <label>Onshore Baringa Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_CPI_Inflation__c</fullName>
        <label>Onshore CPI Inflation (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_CPPA_Revenue__c</fullName>
        <label>Onshore CPPA Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_CfD_Revenue__c</fullName>
        <label>Onshore CfD Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Consultant_Revenue_Forecast__c</fullName>
        <label>Onshore Consultant Revenue Forecast (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFRY</fullName>
                </value>
                <value>
                    <fullName>Aurora</fullName>
                </value>
                <value>
                    <fullName>Baringa</fullName>
                </value>
                <value>
                    <fullName>Cornwall Insight</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_GB_Cornwall_Revenue__c</fullName>
        <label>Onshore Cornwall Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Curtailment_Consultant__c</fullName>
        <label>Onshore Curtailment Consultant (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFRY</fullName>
                </value>
                <value>
                    <fullName>Aurora</fullName>
                </value>
                <value>
                    <fullName>Baringa</fullName>
                </value>
                <value>
                    <fullName>Cornwall Insight</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_GB_Curtailment_Grid_Operator__c</fullName>
        <label>Onshore Curtailment Grid Operator (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_DD_Providers__c</fullName>
        <label>Onshore - DD Providers (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Property &amp; Planning</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_GB_EPC_Provider__c</fullName>
        <label>Onshore EPC Provider (GB)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Energy_Yield_Assessment__c</fullName>
        <label>Onshore Energy Yield Assessment (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>Third_Party</fullName>
                    <label>Third Party</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_GB_Financial_DD_Provider__c</fullName>
        <label>Onshore - Financial - DD Provider (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_IRR_Fixed__c</fullName>
        <label>Onshore IRR - Fixed (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_IRR_Merchant__c</fullName>
        <label>Onshore IRR - Merchant (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Inflation_Notes__c</fullName>
        <label>Onshore Inflation Notes (GB)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Legal_DD_Provider__c</fullName>
        <label>Onshore - Legal - DD Provider (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Merchant_Revenue__c</fullName>
        <label>Onshore Merchant Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Other_Consultant_Revenue__c</fullName>
        <label>Other - Onshore Consultant Revenue %(GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Other_Curtailment_Consultant__c</fullName>
        <label>Other-Onshore Curtailment Consultant(GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Other_Revenue__c</fullName>
        <label>Other - Onshore Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Other_Route_Rev_Forecast__c</fullName>
        <label>Other - Onshore Route Rev Forecast (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Other_Route_to_Market__c</fullName>
        <label>Other - Onshore Route to Market (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Outstanding_Development_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onshore Outstanding Development Risk(GB)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_PP_DD_Provider__c</fullName>
        <label>Onshore - P&amp;P - DD Provider (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_RPI_Inflation__c</fullName>
        <label>Onshore RPI Inflation (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Risk_Investor_Not_Taking__c</fullName>
        <inlineHelpText>Specify Outstanding Development Risk that the investor is not comfortable taking?</inlineHelpText>
        <label>Onshore Risk Investor Not Taking? (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grid Price</fullName>
                </value>
                <value>
                    <fullName>Grid Connection Offer</fullName>
                </value>
                <value>
                    <fullName>Grid Route</fullName>
                </value>
                <value>
                    <fullName>Grid Planning</fullName>
                </value>
                <value>
                    <fullName>Option Lease Completed</fullName>
                </value>
                <value>
                    <fullName>Title Matters</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Auction / Route to Market</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>JR Risk</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_GB_Route_to_Market_Provider__c</fullName>
        <label>Onshore Route to Market Provider (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Route_to_Market_Rev_Forecast__c</fullName>
        <label>Onshore Route to Market Rev Forecast(GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CfD</fullName>
                </value>
                <value>
                    <fullName>CPPA</fullName>
                </value>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_GB_Route_to_Market__c</fullName>
        <label>Onshore Route to Market (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>CfD</fullName>
                </value>
                <value>
                    <fullName>CPPA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_GB_Size_Appetite__c</fullName>
        <label>Onshore Size Appetite (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;15 MW</fullName>
                </value>
                <value>
                    <fullName>15-50 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;50 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;100 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;300 MW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_GB_Specify_Consultant_Revenue__c</fullName>
        <label>Specify Onshore Consultant Revenue %(GB)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Specify_Route_to_Market_Rev__c</fullName>
        <label>Specify Onshore Route to Market Rev%(GB)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Onshore_GB_Technical_DD_Provider__c</fullName>
        <label>Onshore - Technical - DD Provider (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_Grid_Configuration__c</fullName>
        <label>Onshore Grid Configuration</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Co-located with Batteries</fullName>
                </value>
                <value>
                    <fullName>Co-located with H2 Electrolyser</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Standalone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_IE_3rd_Party_Energy_Assessment__c</fullName>
        <label>3rd Party-Onshore Energy Assessment (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_AFRY_Revenue__c</fullName>
        <label>Onshore AFRY Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Additional_Dev_Risk__c</fullName>
        <label>Additional Onshore Dev Risk? (IE)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Aurora_Revenue__c</fullName>
        <label>Onshore Aurora Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Baringa_Revenue__c</fullName>
        <label>Onshore Baringa Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_CPI_Inflation__c</fullName>
        <label>Onshore CPI Inflation (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_CPPA_Revenue__c</fullName>
        <label>Onshore CPPA Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_CfD_Revenue__c</fullName>
        <label>Onshore CfD Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Consultant_Revenue_Forecast__c</fullName>
        <label>Onshore Consultant Revenue Forecast (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFRY</fullName>
                </value>
                <value>
                    <fullName>Aurora</fullName>
                </value>
                <value>
                    <fullName>Baringa</fullName>
                </value>
                <value>
                    <fullName>Cornwall Insight</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_IE_Cornwall_Revenue__c</fullName>
        <label>Onshore Cornwall Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Curtailment_Consultant__c</fullName>
        <label>Onshore Curtailment Consultant (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFRY</fullName>
                </value>
                <value>
                    <fullName>Aurora</fullName>
                </value>
                <value>
                    <fullName>Baringa</fullName>
                </value>
                <value>
                    <fullName>Cornwall Insight</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_IE_Curtailment_Grid_Operator__c</fullName>
        <label>Onshore Curtailment Grid Operator (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_DD_Providers__c</fullName>
        <label>Onshore - DD Providers (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Property &amp; Planning</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_IE_EPC_Provider__c</fullName>
        <label>Onshore EPC Provider (IE)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Energy_Yield_Assessment__c</fullName>
        <label>Onshore Energy Yield Assessment (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>Third_Party</fullName>
                    <label>Third Party</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_IE_Financial_DD_Provider__c</fullName>
        <label>Onshore - Financial - DD Provider (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_IRR_Fixed__c</fullName>
        <label>Onshore IRR - Fixed (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_IRR_Merchant__c</fullName>
        <label>Onshore IRR - Merchant (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Inflation_Notes__c</fullName>
        <label>Onshore Inflation Notes (IE)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Legal_DD_Provider__c</fullName>
        <label>Onshore - Legal - DD Provider (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Merchant_Revenue__c</fullName>
        <label>Onshore Merchant Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Other_Consultant_Revenue__c</fullName>
        <label>Other - Onshore Consultant Revenue %(IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Other_Curtailment_Consultant__c</fullName>
        <label>Other-Onshore Curtailment Consultant(IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Other_Revenue__c</fullName>
        <label>Other - Onshore Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Other_Route_Rev_Forecast__c</fullName>
        <label>Other - Onshore Route Rev Forecast (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Other_Route_to_Market__c</fullName>
        <label>Other - Onshore Route to Market (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Outstanding_Development_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onshore Outstanding Development Risk(IE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_PP_DD_Provider__c</fullName>
        <label>Onshore - P&amp;P - DD Provider (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_RPI_Inflation__c</fullName>
        <label>Onshore RPI Inflation (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Risk_Investor_Not_Taking__c</fullName>
        <inlineHelpText>Specify Outstanding Development Risk that the investor is not comfortable taking?</inlineHelpText>
        <label>Onshore Risk Investor Not Taking? (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grid Price</fullName>
                </value>
                <value>
                    <fullName>Grid Connection Offer</fullName>
                </value>
                <value>
                    <fullName>Grid Route</fullName>
                </value>
                <value>
                    <fullName>Grid Planning</fullName>
                </value>
                <value>
                    <fullName>Option Lease Completed</fullName>
                </value>
                <value>
                    <fullName>Title Matters</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Auction / Route to Market</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>JR Risk</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_IE_Route_to_Market_Provider__c</fullName>
        <label>Onshore Route to Market Provider (IE)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Route_to_Market_Rev_Forecast__c</fullName>
        <label>Onshore Route to Market Rev Forecast(IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CfD</fullName>
                </value>
                <value>
                    <fullName>CPPA</fullName>
                </value>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_IE_Route_to_Market__c</fullName>
        <label>Onshore Route to Market (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>CfD</fullName>
                </value>
                <value>
                    <fullName>CPPA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_IE_Size_Appetite__c</fullName>
        <label>Onshore Size Appetite (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;15 MW</fullName>
                </value>
                <value>
                    <fullName>15-50 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;50 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;100 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;300 MW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_IE_Specify_Consultant_Revenue__c</fullName>
        <label>Specify Onshore Consultant Revenue %(IE)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Specify_Route_to_Market_Rev__c</fullName>
        <label>Specify Onshore Route to Market Rev%(IE)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Onshore_IE_Technical_DD_Provider__c</fullName>
        <label>Onshore - Technical - DD Provider (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_Interest_in_which_Region__c</fullName>
        <label>Onshore Interest in which Region?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>Northern Ireland</fullName>
                </value>
                <value>
                    <fullName>Republic of Ireland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onshore_Other_Service_Not_Available__c</fullName>
        <label>Other - Onshore Service Not Available</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_Service_Not_Available_to_RES__c</fullName>
        <label>Which Service is Not Available to RES?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EPC</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>O&amp;M</fullName>
                </value>
                <value>
                    <fullName>PPA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Type_of_Account__c</fullName>
        <label>Other - Type of Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provide_Details__c</fullName>
        <label>Provide Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solar_Additional_Comments__c</fullName>
        <label>Solar Additional Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solar_GB_3rd_Party_Energy_Assessment__c</fullName>
        <label>3rd Party - Solar Energy Assessment (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_GB_AFRY_Revenue__c</fullName>
        <label>Solar AFRY Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Additional_Dev_Risk__c</fullName>
        <label>Additional Solar Dev Risk? (GB)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Aurora_Revenue__c</fullName>
        <label>Solar Aurora Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Baringa_Revenue__c</fullName>
        <label>Solar Baringa Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_GB_CPI_Inflation__c</fullName>
        <label>Solar CPI Inflation (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_GB_CPPA_Revenue__c</fullName>
        <label>Solar CPPA Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>